--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -481,7 +481,8 @@
 
 .title_heading {
   font-size: 2.25rem;
-    color: #222;
+    color: #2a2a2a;
+    font-weight: 550;
     margin: 50px 0 20px 0;
     font-family: ui-monospace;
 } 
@@ -545,8 +546,8 @@
 .product_list_images {
   width: 100%;
   height: 100%;
-  /* object-fit: cover; */
-  object-fit: contain;
+  object-fit: cover;
+  /* object-fit: contain; */
    /* Ensures the image fills the container */
   transition: transform 0.4s ease;
   border-radius: 8px;
@@ -656,7 +657,7 @@
 .product_list_containet h4 {
   font-size: 1.1rem;
   margin-bottom: 8px;
-  font-weight: 600;
+  font-weight: 450;
   color: #333;
   text-transform: capitalize;
   transition: color 0.3s, transform 0.3s;
@@ -703,7 +704,7 @@
 .price  {
   color: #333;
   font-size: 1.2rem;
-  font-weight: 600;
+  font-weight: 450;
   margin: 5px 0;
   letter-spacing: 2px;
 }
@@ -714,7 +715,7 @@
   color: #f23e14;
   text-decoration: line-through;
   font-size: 1rem;
-  margin-top: -9px;
+  /* margin-top: 12px; */
 }
 
 
@@ -1002,8 +1003,8 @@
   .title_heading {
     word-break: break-all;
     font-size: 1.5rem;
-    font-weight: 900;
-    color: #222;
+    font-weight: 550;
+    color: #2a2a2a;
     margin: 10px 0;
   }
 
@@ -1018,7 +1019,8 @@
   }
 
   .product_list_images {
-    object-fit: contain;
+    /* object-fit: contain; */
+    object-fit: cover;
   }
   .productItem {
     width: 100%;
@@ -1054,7 +1056,7 @@
   .price {
     font-size: 1.2rem;
     margin: 4px 0;
-    font-weight: 600;
+    font-weight: 450;
     letter-spacing: 0;
   }
 
@@ -1065,7 +1067,7 @@
   }
   .discountPrice {
     font-size: 1rem;
-    margin-top: 12px;
+    /* margin-top: 12px; */
   }
  
  
