--- a/app/admin/product/Adminproduct.module.css
+++ b/app/admin/product/Adminproduct.module.css
@@ -5,9 +5,9 @@
 
 /* Search Page Container */
 .searchBarContainer {
-    padding: 20px;
+    /* padding: 20px; */
     max-width: 1200px;
-    margin: 70px auto;
+    /* margin: 70px auto; */
     
   }
   
@@ -376,7 +376,8 @@
   /* Product Grid */
   .productsGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
     gap: 20px;
   }
   
