--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -43,6 +43,11 @@
   margin: 0px auto !important;
 }
 
+.products_grid {
+  display: grid;
+grid-template-columns: repeat(4, 1fr);  
+gap: 20px;
+}
 /* Grid layout for filters and products */
 .searchBarContainerto {
   display: grid;
@@ -948,12 +953,18 @@
   
 
   
-  
+  .productsContainer {
+    margin: 60px 0;
+  }
 
 /* Responsive Design */
 @media (max-width: 768px) {
 
-
+.products_grid {
+  display: grid;
+grid-template-columns: repeat(2, 1fr);  
+gap: 20px;
+}
  
 
   .quick_view_modal {
