--- a/styles/product/SearchBar2.module.css
+++ b/styles/product/SearchBar2.module.css
@@ -2,14 +2,15 @@
 .searchBarContainer {
   padding: 20px;
   max-width: 1200px;
-  /* margin: 70px auto; */
+  margin: 60px auto; 
+  /*  margin ...  /prodcut done */
   
 }
 
 /* Grid layout for filters and products */
 .searchBarContainerto {
   display: grid;
-  /* grid-template-columns: 1fr 3fr;  */
+  grid-template-columns: 1fr 3fr; 
   /* Sidebar on the left, content on the right */
   gap: 20px;
 }
@@ -101,6 +102,8 @@
   align-items: center;
   text-align: center;
   flex-wrap: wrap;
+  gap: 10px 
+  /* for product page done  */
 }
 
 .CategorySection li:hover {
@@ -545,8 +548,8 @@
   border-radius: 50%; /* Circular image */
   max-width: 100%;
   height: auto;
-  width: 80px; /* Adjust width for circular image size */
-  height: 80px; /* Adjust height for circular image size */
+  width: 40px; /* Adjust width for circular image size */
+  height: 40px; /* Adjust height for circular image size */
   transition: transform 0.3s; /* Smooth rotation */
 }
 
@@ -1449,7 +1452,7 @@ color: #d04e18;
   }
 
   .CategorySection ul li{
-    display: block;
+    /* display: block; */
     
   }
 
@@ -1467,8 +1470,8 @@ color: #d04e18;
   } 
   /* product grid   */
 .previewImage {
-width: 50px;
-height: 50px;
+width: 40px;
+height: 40px;
 }
 
 
