--- a/styles/user/dashboard/Dashboard.module.css
+++ b/styles/user/dashboard/Dashboard.module.css
@@ -2,7 +2,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #f5f5f5;
     font-family: 'Inter', sans-serif;
     margin-top: 100px;
@@ -602,6 +602,7 @@
 
   .mainContent {
       margin-left: 0;
+      width: 100%;
   }
 
   .sidebar.closed {
