--- a/styles/admin/order/Order.module.css
+++ b/styles/admin/order/Order.module.css
@@ -45,7 +45,7 @@
   
   .button {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: red;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -74,7 +74,7 @@
   }
   
   .orderTable th {
-    background-color: #007bff;
+    background-color: #f0580d;
     color: #fff;
     font-weight: bold;
   }
@@ -119,7 +119,7 @@
   }
   
   .link {
-    color: #007bff;
+    color: #000;
     text-decoration: none;
   }
   
