--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -90,7 +90,8 @@
   justify-content: flex-end;
   align-items: center;
   gap: 20px;
-  padding: 11px;
+  /* padding: 11px; */
+  padding: 14px;
   background-color: #fff;
   position: fixed; /* Fix to top */
   top: 0;
