--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -972,6 +972,26 @@ gap: 20px;
     margin: 60px 0;
   }
 
+
+
+/* offer page start haere   */
+
+.products_grid {
+  display: grid;
+grid-template-columns: repeat(4, 1fr);  
+gap: 20px;
+}
+
+@media (max-width: 768px) {
+
+  .products_grid {
+    display: grid;
+  grid-template-columns: repeat(2, 1fr);  
+  gap: 20px;
+  }
+
+ }
+/* odffter page and here  */
 /* Responsive Design */
 @media (max-width: 768px) {
 
@@ -1034,7 +1054,7 @@ gap: 20px;
     font-size: 1.5rem;
     font-weight: 550;
     color: #2a2a2a;
-    margin: 10px 0;
+    margin: 20px 0;
   }
 
   .products_grid {
