--- a/styles/components/Footer.module.css
+++ b/styles/components/Footer.module.css
@@ -350,4 +350,7 @@ display: flex;
     padding: 20px 0 80px 0;
     margin: 10px 0 !important;
   }
+  .copyright p {
+    font-size: .65rem;
+  }
 }
