--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1057,7 +1057,9 @@ gap: 20px;
     margin: 20px 0;
   }
 
-  .products_grid {
+  .products_grid{}
+
+.products_grid {
     grid-template-columns: repeat(2, 1fr);
     width: 100%;
     gap: 10px;
