--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -43,7 +43,7 @@
   margin: 0px auto !important;
 }
 
-.productgrid {
+.products_grid {
   display: grid;
 grid-template-columns: repeat(4, 1fr);  
 gap: 20px;
@@ -509,7 +509,7 @@ gap: 20px;
 
 
 
-.productgrid {
+.products_grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
@@ -976,7 +976,7 @@ gap: 20px;
 
 /* offer page start haere   */
 
-.productgrid {
+.products_grid {
   display: grid;
 grid-template-columns: repeat(4, 1fr);  
 gap: 20px;
@@ -984,7 +984,7 @@ gap: 20px;
 
 @media (max-width: 768px) {
 
-  .productgrid {
+  .products_grid {
     display: grid;
   grid-template-columns: repeat(2, 1fr);  
   gap: 20px;
@@ -995,7 +995,7 @@ gap: 20px;
 /* Responsive Design */
 @media (max-width: 768px) {
 
-.productgrid {
+.products_grid {
   display: grid;
 grid-template-columns: repeat(2, 1fr);  
 gap: 20px;
@@ -1057,9 +1057,7 @@ gap: 20px;
     margin: 20px 0;
   }
 
-  .productgrid{}
-
-.productgrid {
+  .products_grid {
     grid-template-columns: repeat(2, 1fr);
     width: 100%;
     gap: 10px;
