--- a/styles/home/CartSidebar.module.css
+++ b/styles/home/CartSidebar.module.css
@@ -69,7 +69,7 @@
   margin-bottom: 20px;
   border-bottom: 1px solid #f0f0f0;
   padding-bottom: 15px;
-  gap: 20px;
+  gap: 10px;
 }
 
 .itemImage {
@@ -89,6 +89,7 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+  border-radius: 5px;
 }
 
 .itemDetails {
@@ -101,6 +102,8 @@
   font-weight: 500;
   margin: 5px 0;
   color: #333;
+  text-transform: capitalize;
+
 }
 
 .itemDetails p {
@@ -258,6 +261,7 @@
   color: #666;
   margin: 5px 0;
   text-transform: capitalize;
+  text-align: left;
 }
 
 .selectedSize p:hover {
@@ -282,6 +286,19 @@
     height: 100%;
         object-fit: contain;
         width: 100%;
+  }
+
+
+  .footer {
+    padding: 10px;
+  }
+  .footer h3  {
+    margin: 8px;
+  }
+
+  .footer p{
+    font-size: 0.85rem;
+    font-weight: 500;
   }
 
 }
