--- a/styles/user/dashboard/Dashboard.module.css
+++ b/styles/user/dashboard/Dashboard.module.css
@@ -507,6 +507,7 @@
   border: none;
   cursor: pointer;
   padding: 10px;
+  font-size: 1.5rem;
   border-radius: 5px;
   color: #ffffff;
   transition: transform 0.3s ease;
