--- a/styles/home/Orderid.module.css
+++ b/styles/home/Orderid.module.css
@@ -15,6 +15,7 @@
   gap: 10px;
     align-items: center;
     text-align: center;
+    display: flex;
 }
 /* Modal-like Box */
 .modalBox {
@@ -219,6 +220,9 @@
 /* Responsive Design */
 @media (max-width: 768px) {
 
+  .shippingAddressSectionx {
+    padding: 0rem;
+  }
   .pageWrapper {
     padding: 1px;
   }
@@ -273,9 +277,7 @@
 }
 
 @media (max-width: 308px) {
-.shippingAddressSection p{
-  flex-direction: column;
-}
+
 
 .displayflexx {
   justify-content: center;
