--- a/styles/product/SearchBar2.module.css
+++ b/styles/product/SearchBar2.module.css
@@ -1712,3 +1712,19 @@ height: 1.8em;
   color: white;
 }
 
+
+
+.tagsSection button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  border: none;
+  background-color: #f23e14;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.tagsSection button:hover {
+  background-color: #d83612;
+}
