--- a/styles/product/productde.module.css
+++ b/styles/product/productde.module.css
@@ -12,8 +12,8 @@
     max-width: 1300px;
     margin: auto;
     /* font-family: 'Arial', sans-serif; */
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
   
   /* .url {
@@ -37,14 +37,14 @@ color: #333;
 .url {
   gap: 10px;
   /* background-color: #fff; */
-  padding: 20px;
-  border-radius: 10px;
+  padding: 20px 0 0;
+  /* border-radius: 10px; */
   display: flex;
   align-items: center;
   font-size: 1.2rem;
   text-transform: capitalize;
   font-weight: 500;
-  margin: 20px;
+  margin: 20px 20px 0;
   /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);  */
 }
 
@@ -1060,7 +1060,7 @@ color: #333;
 @media (max-width: 768px) {
   .productDetails {
     grid-template-columns: 1fr;
-   margin: 50px 0 10px 0;
+   margin: 60px 0 10px 0;
      padding: 0px;
      gap: 10px;
   }
